fix: gap title and verified/mod button on profile.php

--- a/styles/_imagewithtext.scss
+++ b/styles/_imagewithtext.scss
@@ -33,7 +33,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 2rem;
+    gap: 1rem;
 }
 
 #profile__verified{
