--- a/styles/style.css
+++ b/styles/style.css
@@ -865,7 +865,7 @@ footer {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  gap: 2rem;
+  gap: 1rem;
 }
 
 #profile__verified {
